--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "number-with-commas": "^1.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-number-format": "^4.4.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
