Added Unique Keys

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-number-format": "^4.4.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "uuid": "^7.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
